# codemap_ai

./: .gitignore  CONTRIBUTING.md  README.md  cli.py  codemap_app.py  codemap_cli.py  create_bom_test.py  fix_bom.py  manual_docstring_check.py  manual_return_check.py  manual_signature_check.py  manual_summary_check.py  package-lock.json  pyproject.toml  security_utils.py  tem_phase5_test.py  temp.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
analysis/architecture/: architecture_engine.py  dependency_cycles.py  risk_radar.py
analysis/call_graph/: __init__.py  call_extractor.py  call_graph_builder.py  call_resolver.py  context_models.py  cross_file_resolver.py  execution_tracker.py  flow_builder.py  models.py
analysis/core/: __init__.py  ast_context.py  ast_parser.py  class_extractor.py  function_extractor.py  import_extractor.py  temp_cross_file_test.py  temp_import_test.py  test.py
analysis/explain/: __init__.py  ai_client.py  docstring_extractor.py  explain_runner.py  repo_summary_generator.py  return_analyzer.py  risk_flags.py  signature_extractor.py  summary_generator.py
analysis/graph/: __init__.py  callgraph_index.py  entrypoint_detector.py  impact_analyzer.py
analysis/indexing/: __init__.py  import_resolver.py  symbol_index.py
analysis/runners/: __init__.py  phase4_runner.py
analysis/testing_repo/: test.py
analysis/utils/: ast_helpers.py  bom_handler.py  cache_manager.py  path_resolver.py  progress_spinner.py  repo_fetcher.py  repo_walk.py
demo_repo/: hyperparameter_log.py
doc/: phase4_checklist.md
tests/: test_cache_cli_commands.py  test_cache_retention.py  test_cli_invalid_escape_warnings.py  test_codemap_cli_entrypoint.py  test_entrypoint_detector.py  test_explain_runner_collection.py  test_llm_key_never_persisted.py  test_no_key_persistence.py  test_registry_session_mode.py  test_repo_walk_filters.py  test_security_cli_integration.py  test_security_redaction.py  test_summary_generator.py  test_symbol_explain_cache.py  test_symbol_info_endpoint.py  test_ui_ai_settings_summary.py  test_ui_byok_key_not_stored.py  test_ui_private_mode_security.py  test_ui_retention_controls.py
ui/: app.py  device_id.py  hosted_ai.py  hosted_ai_store.py
ui/static/: app.js  (+1 more)
vscode-extension/: codemap-ai-0.1.0.vsix  codemap-local-0.1.0.vsix
(+2 files in other folders)
